# aoc-2025-rust

./: .gitignore  Cargo.toml  README.md  new-day.sh
.github/workflows/: ci.yml
common/: Cargo.toml
common/src/: directed_graph.rs  grid.rs  input_reader.rs  lib.rs  point.rs  point3d.rs  range.rs  rect.rs  sequence_generator.rs  string_utils.rs
day-template/: Cargo.toml
day-template/src/: main.rs
day01/: Cargo.toml
day01/src/: main.rs
day02/: Cargo.toml
day02/src/: main.rs
day03/: Cargo.toml
day03/src/: main.rs
day04/: Cargo.toml
day04/src/: main.rs
day05/: Cargo.toml
day05/src/: main.rs
day06/: Cargo.toml
day06/src/: main.rs
day07/: Cargo.toml
day07/src/: main.rs
day08/: Cargo.toml
day08/src/: main.rs  segment.rs
day09/: Cargo.toml
day09/src/: main.rs
day10/: Cargo.toml
day10/src/: machine.rs  main.rs
day11/: Cargo.toml
day11/src/: main.rs
day12/: Cargo.toml
day12/src/: checker.rs  main.rs  parser.rs  puzzle_input.rs  region.rs  shape.rs
