[workspace]
members = [
   'day01',
   'day02',
   'day03',
   'day04',
   'day05',
   'day06',
   'day07',
   'day08',
   'day09',
   'day10',
   'day11',
]

# Prevent warning:
# virtual workspace defaulting to `resolver = "1"` despite one or more workspace members being on edition 2021
# which implies `resolver = "2"`
resolver = "2"
